Use gradle to create q2 start scripts