@@ -11,6 +11,8 @@ apply plugin: 'biz.aQute.bnd.builder'
 apply plugin: 'org.owasp.dependencycheck'
 
 import aQute.bnd.gradle.Bundle
+import java.util.stream.Collectors
+import org.gradle.api.internal.plugins.StartScriptGenerator
 
 dependencies {
     api libraries.jdom
@@ -51,6 +53,72 @@ dependencies {
 
 def archiveJarName="${project.name}-${project.version}.jar"
 def q2ArchiveJarName="${project.name}-${project.version}-q2.jar"
+
+class jposStartScripts extends org.gradle.jvm.application.tasks.CreateStartScripts {
+    @Override
+    @TaskAction
+    void generate() {
+        def generator = new StartScriptGenerator(unixStartScriptGenerator, windowsStartScriptGenerator)
+        def javaModuleDetector = getJavaModuleDetector()
+        generator.setApplicationName(getApplicationName())
+        generator.setMainClassName(getMainClassName())
+        generator.setDefaultJvmOpts(getDefaultJvmOpts())
+        generator.setOptsEnvironmentVar(getOptsEnvironmentVar())
+        generator.setExitEnvironmentVar(getExitEnvironmentVar())
+        generator.setClasspath(getRelativePath(javaModuleDetector.inferClasspath(mainModule.isPresent(), getClasspath())))
+        generator.setModulePath(getRelativePath(javaModuleDetector.inferModulePath(mainModule.isPresent(), getClasspath())))
+        if (isEmpty(getExecutableDir())) {
+            generator.setScriptRelPath(getUnixScript().getName())
+        } else {
+            generator.setScriptRelPath(getExecutableDir() + "/" + getUnixScript().getName())
+        }
+        generator.generateUnixScript(getUnixScript())
+        generator.generateWindowsScript(getWindowsScript())
+    }
+
+    private Iterable<String> getRelativePath(FileCollection path) {
+        return path.getFiles().stream().map {input -> input.getName() }.collect(Collectors.toList())
+    }
+
+    private static boolean isEmpty(CharSequence cs) {
+        return cs == null || cs.length() == 0
+    }
+}
+
+def vmArgs = [
+    "-server",
+    "-Xmx1G",
+    "-Xloggc:log/gc.log",
+    "-Djava.net.preferIPv4Stack=true",
+    "-XX:+UseConcMarkSweepGC",
+    "-XX:+ParallelRefProcEnabled",
+    "-XX:ParallelGCThreads=2",
+    "-XX:+TieredCompilation",
+    "-Dpid=jpos.pid"
+]
+
+task createStartScripts(type: jposStartScripts) {
+    outputDir = new File(project.buildDir, "bin")
+    applicationName = 'q2'
+    defaultJvmOpts = vmArgs
+    mainClass = 'org.jpos.q2.Q2'
+    classpath = files(file("${project.buildDir}/${project.libsDirName}/${q2ArchiveJarName}"))
+    doLast {
+        unixScript.text = unixScript.text.replace('DEFAULT_JVM_OPTS=',
+                'cd $APP_HOME\n' +
+                'rm -f deploy/shutdown.xml\n' +
+                'if [ -f jpos.pid ] && ps -p $(cat jpos.pid) > /dev/null 2>&1\n' +
+                'then\n' +
+                '   echo "Process $(cat jpos.pid) is running"\n' +
+                '   exit 1\n' +
+                'fi\n' +
+                'DEFAULT_JVM_OPTS='
+        )
+        windowsScript.text = windowsScript.text.replace('set DEFAULT_JVM_OPTS=',
+                'cd %APP_HOME%\r\nset DEFAULT_JVM_OPTS=')
+    }
+}
+
 def jposCopySpec = copySpec {
     def cfg = new Properties()
     def target = project.hasProperty('target') ? target : 'devel'
@@ -82,6 +150,11 @@ def jposCopySpec = copySpec {
         fileMode 0400
     }
     from(file("${project.buildDir}/${project.libsDirName}/${q2ArchiveJarName}"))
+
+    into("bin") {
+        from(createStartScripts)
+        fileMode = 0755
+    }
 
     into("lib") {
         from(configurations.runtimeClasspath)
